--- a/pom.xml
+++ b/pom.xml
@@ -122,6 +122,13 @@
                 <artifactId>lombok</artifactId>
                 <version>1.18.2</version>
             </dependency>
+
+            <dependency>
+                <groupId>com.alibaba.boot</groupId>
+                <artifactId>dubbo-spring-boot-starter</artifactId>
+                <version>0.1.1</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
