--- a/course-web/src/main/resources/config/application-prd.properties
+++ b/course-web/src/main/resources/config/application-prd.properties
@@ -10,3 +10,6 @@ spring.redis.port=${redis.port}
 spring.redis.password=
 
 dubbo.registry=zookeeper://${registry.address}?client=curator
+
+logging.level.root=info
+logging.file=/var/app/logs/course-web/course-web-app.log
