--- a/course-api-gateway/Dockerfile
+++ b/course-api-gateway/Dockerfile
@@ -1,5 +1,5 @@
 FROM openjdk:8-jre-slim
-MAINTAINER wch wch@163.com
+LABEL maintainer="wch wch@163.com"
 
 COPY target/course-api-gateway-1.0-SNAPSHOT.jar /course-api-gateway.jar
 
