--- a/course-dubbo-server/pom.xml
+++ b/course-dubbo-server/pom.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
@@ -10,11 +11,11 @@
         <relativePath>../pom.xml</relativePath>
     </parent>
 
-    <artifactId>course-rpc-server</artifactId>
+    <artifactId>course-dubbo-server</artifactId>
     <packaging>jar</packaging>
 
-    <name>course-rpc-server</name>
-    <description>Course Project RPC Server Module</description>
+    <name>course-dubbo-server</name>
+    <description>Course Project Dubbo Server Module</description>
 
     <dependencies>
         <dependency>
