--- a/course-web/Dockerfile
+++ b/course-web/Dockerfile
@@ -1,5 +1,5 @@
 FROM openjdk:8-jre-slim
-MAINTAINER wch wch@163.com
+LABEL maintainer="wch wch@163.com"
 
 COPY target/course-web-1.0-SNAPSHOT.jar /course-web.jar
 
