go rpc module doc

--- a/course-message/Dockerfile
+++ b/course-message/Dockerfile
@@ -1,10 +1,11 @@
 FROM golang:latest
 LABEL maintainer="wch wch@163.com"
 
-COPY src/ $GOPATH/src/
+COPY src/course $GOPATH/src/course
 
 WORKDIR $GOPATH/src/course
 
-RUN go build main.go
+# TODO 下载go thrift依赖
+RUN go build .
 
 ENTRYPOINT ["./main"]
