--- a/course-client-service/pom.xml
+++ b/course-client-service/pom.xml
@@ -6,9 +6,10 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <artifactId>course</artifactId>
         <groupId>com.wch.course</groupId>
+        <artifactId>course</artifactId>
         <version>1.0-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
 
     <artifactId>course-client-service</artifactId>
