--- a/course-service/pom.xml
+++ b/course-service/pom.xml
@@ -9,6 +9,7 @@
         <artifactId>course</artifactId>
         <groupId>com.wch.course</groupId>
         <version>1.0-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
 
     <artifactId>course-service</artifactId>
